Alt menü ikonları eklendi
closed #3

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/nav_view_foods"
-        android:icon="@drawable/foods"
+        android:icon="@drawable/home"
         android:title="Yemekler" />
 
     <item
         android:id="@+id/nav_add_food"
-        android:icon="@drawable/ice_cream"
+        android:icon="@drawable/add_food"
         android:title="Yemek Ekle" />
 
     <item
@@ -18,6 +18,6 @@
 
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/profilenav"
         android:title="Hesabım" />
 </menu>
