Uygulama üst başlık yazısı düzenlendi
closed #4

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -3,6 +3,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:theme="@style/ToolBarStyle"
     android:background="@color/colorPrimary"
     android:minHeight="?attr/actionBarSize">
 
