--- a/app/src/main/res/layout/fragment_view_foods.xml
+++ b/app/src/main/res/layout/fragment_view_foods.xml
@@ -16,24 +16,24 @@
 
             <Spinner
                 android:id="@+id/categorySpinner"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="10dp"
-                android:background="#E9E9E9" />
+                android:background="#FFFFFF" />
         </LinearLayout>
 
-        <ScrollView
+        <GridView
+            android:id="@+id/foodGridView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:clipToPadding="true"
+            android:fitsSystemWindows="true"
+            android:numColumns="1"
+            android:stretchMode="columnWidth" />
 
-            <GridView
-                android:id="@+id/foodGridView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </ScrollView>
     </LinearLayout>
 </LinearLayout>
