--- a/app/src/main/res/layout/activity_recipe_book.xml
+++ b/app/src/main/res/layout/activity_recipe_book.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mymobilekitchen.activities.RecipeBookActivity">
+    tools:context="com.fayarretype.mymobilekitchen.activities.RecipeBookActivity"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout" />
+
+    <GridView
+        android:id="@+id/foodGridViewRecipes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="true"
+        android:fitsSystemWindows="true"
+        android:numColumns="1"
+        android:stretchMode="columnWidth" />
+
+</LinearLayout>
