--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -219,6 +219,7 @@
                     android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/profileOptionsCardView"
                         android:layout_width="130dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center"
@@ -257,6 +258,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/aboutActivityCardView"
                         android:layout_width="130dp"
                         android:layout_height="130dp"
                         android:layout_gravity="center"
