--- a/app/src/main/res/layout/activity_recipe_book_food_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_book_food_detail.xml
@@ -20,6 +20,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#F4F4F4"
+                android:textStyle="bold"
                 android:onClick="deleteButtonOnClick"
                 android:text="SİL" />
 
@@ -28,6 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#F4F4F4"
+                android:textStyle="bold"
                 android:onClick="editButtonOnClick"
                 android:text="DÜZENLE" />
         </LinearLayout>
