--- a/app/src/main/res/layout/activity_recipe_book.xml
+++ b/app/src/main/res/layout/activity_recipe_book.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipe_book_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fayarretype.mymobilekitchen.activities.RecipeBookActivity"
@@ -9,6 +10,12 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_layout" />
+
+    <ImageView
+        android:id="@+id/recipe_book_activity_back"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <GridView
         android:id="@+id/foodGridViewRecipes"
