--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/stock_activity_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
@@ -9,6 +10,13 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_layout" />
+
+    <ImageView
+    android:id="@+id/stock_activity_back"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone"
+    android:layout_below="@+id/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
