--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,35 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fayarretype.mymobilekitchen.activities.ProfileActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.fayarretype.mymobilekitchen.activities.ProfileActivity">
 
-    <LinearLayout
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout" />
+
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15pt"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="YAKINDA GELECEK" />
-
-    <Button
-        android:id="@+id/backButton"
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp"
-        android:background="#F5F5F5"
-        android:text="ANA MENÜYE DÖN" />
-    </LinearLayout>
+        android:background="@drawable/comingsoon" />
 
 </LinearLayout>
