--- a/app/src/main/res/layout/activity_wizard_food.xml
+++ b/app/src/main/res/layout/activity_wizard_food.xml
@@ -80,24 +80,23 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="2dp"
-            android:background="#F5F5F5"
+            android:background="@drawable/edit_text_background"
             android:hint="Malzemeye göre ara"
             android:overScrollMode="never"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
             android:paddingRight="10dp"
-            android:singleLine="false"
-            android:text=""
+            android:paddingBottom="15dp"
             android:textColor="#474747"
-            android:textColorHint="#6F6F6F"
+            android:textColorHint="#333"
             android:textCursorDrawable="@color/colorPrimary"
-            android:textSize="20sp"
-            android:textStyle="normal"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/item_add_btn"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
