--- a/app/src/main/res/layout/food_row_layout.xml
+++ b/app/src/main/res/layout/food_row_layout.xml
@@ -62,7 +62,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="15dp"
                 android:textColor="#666"
-                android:textSize="9sp" />
+                android:maxLines="1"
+                android:textSize="10sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -70,7 +71,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/cookingTimeTextView"
+                    android:id="@+id/preparationTimeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -79,7 +80,7 @@
                     android:textSize="10sp" />
 
                 <TextView
-                    android:id="@+id/preparationTimeTextView"
+                    android:id="@+id/cookingTimeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
