--- a/app/src/main/res/layout/activity_wizard_food.xml
+++ b/app/src/main/res/layout/activity_wizard_food.xml
@@ -105,6 +105,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background"
+            android:onClick="addItemBtnOnClick"
             android:textColor="#FFF"
             android:textStyle="bold"
             android:text="EKLE" />
