--- a/app/src/main/res/layout/material_row_layout.xml
+++ b/app/src/main/res/layout/material_row_layout.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/delete_material_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/material_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
-        android:textStyle="bold"
-        android:textColor="#FFF"
         android:layout_margin="10dp"
-        android:padding="20dp"/>
-</LinearLayout>
+        android:background="@drawable/button_background"
+        android:padding="10dp"
+        android:textColor="#FFF"
+        android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/delete_material_btn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@android:drawable/ic_delete" />
+
+</RelativeLayout>
