--- a/app/src/main/res/layout/food_row_layout.xml
+++ b/app/src/main/res/layout/food_row_layout.xml
@@ -93,6 +93,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="right"
+                    android:gravity="right"
                     android:layout_weight="1"
                     android:textColor="#444444"
                     android:textSize="10sp" />
