--- a/app/src/main/res/layout/activity_recipe_book_food_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_book_food_detail.xml
@@ -125,6 +125,31 @@
             tools:text="Kaç Kişilik :" />
 
         <TextView
+            android:id="@+id/materialHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="2dp"
+            android:text="Malzemeler"
+            android:textAllCaps="true"
+            android:textColor="#666"
+            android:textSize="7pt"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/malzemelerTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:maxLines="100"
+            android:textColor="#888"
+            android:textSize="7pt"
+            android:textStyle="normal"/>
+
+        <TextView
             android:id="@+id/aciklamasiBaslikDetail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
